[package]
name = "rupyjit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rupyjit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
log = "0.4"
env_logger = "0.8.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
